src/main/resources/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  labels:
    app: cs
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: serviceport
    - name: https
      port: 443
      targetPort: serviceport
    - name: manage
      port: 8081
      targetPort: manageport
  selector:
    app: cms
